syntax = "proto3";

package pb;

import "customer/customer.proto";

option go_package = "barbershop/src/pb/customer";


message CreateCustomerRequest{
    string name = 1;
    string email = 2;
    optional string phone = 3;
    int32 gender = 4;
    optional string password = 5;
    bool is_social_auth = 6;
}

message CreateCustomerResponse {
    Customer customer = 1;
}